# veil_light_plugin

./: CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: veil_light_plugin.podspec
ios/Classes/: veil_light_plugin.c
lib/: veil_light.dart  veil_light_plugin.dart  veil_light_plugin_bindings_generated.dart
lib/native/: plugin.dart
lib/src/: veil_light_base.dart
lib/src/core/: array.dart  bitcoin_dart_fix.dart  buffer_utility.dart  crypto.dart  dart_ref.dart
lib/src/models/: build_transaction_result.dart  build_transaction_result.g.dart  publish_transaction_result.dart  publish_transaction_result.g.dart
lib/src/models/errors/: add_ct_data_failed.dart  add_outputs_failed.dart  amount_is_over_balance.dart  amounts_must_not_be_negative.dart  change_address_is_not_stealth.dart  no_anon_txes.dart  (+29 more)
lib/src/veil/: chainparams.dart  coin_selection.dart  cveil_address.dart  cveil_recipient.dart  cveil_stealth_address.dart  lightwallet.dart  lightwallet_account.dart  lightwallet_address.dart  lightwallet_transaction_builder.dart  policy.dart  rpc_requester.dart  serialization.dart  stealth.dart
linux/: CMakeLists.txt
macos/: veil_light_plugin.podspec
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
src/: CMakeLists.txt  veil_light_plugin.c
windows/: CMakeLists.txt
(+44 files in other folders)
