[package]
name = "veil_light_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.8.4"
rand_hc = "0.3.2"
byteorder = { version = "1.4.3", default-features = false }
secp256k1-sys = { version = "0.4.1", features=["recovery"], git = "https://github.com/steel97/rust-secp256k1", rev = "584baa3cf8b785f48e0b57f09a1f91c4c13f8890" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"